# enum_downcast

./: README.md
crates/enum_downcast/: Cargo.toml
crates/enum_downcast/src/: lib.rs
crates/enum_downcast/tests/: override_result_test.rs
crates/enum_downcast_derive/: Cargo.toml
crates/enum_downcast_derive/src/: lib.rs  variant.rs
examples/: basic.rs  custom_impl.rs  enum_dispatch.rs  generics.rs  orphan_rule.rs  other_derives.rs  partial_custom_impl.rs  skip.rs  specialization.rs
