[package]
name = "enum_downcast_derive"
version = "0.1.0"
edition = "2021"
description = "derive for enum_downcast"
categories = []
keywords = []
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/ryo33/enum_downcast"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
# extra-traits for PartialEq of syn::Attribute
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
